--- a/alurapic/src/components/shared/botao/Botao.scss
+++ b/alurapic/src/components/shared/botao/Botao.scss
@@ -1,3 +1,5 @@
+$cor: firebrick;
+
 .botao {
   display: inline-block;
   padding: 10px;
@@ -7,7 +9,7 @@
 }
 
 .botao-perigo {
-  background: red;
+  background: $cor;
   color: white;
 }
 
